# android_ai_sdet

./: .gitignore  Makefile  README.md
evals/: requirements.txt
evals/gpqa_cpp/: CMakeLists.txt  prepare_gpqa.py
evals/gpqa_cpp/src/: gpqa_eval.cpp
evals/ifeval/: run_ifeval.py
scripts/: bootstrap_eval.sh
